[tool.poetry]
name = "arena"
version = "0.1.0"
description = ""
authors = ["suhyun.kang <suhyun.kang@yanolja.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
firebase-admin = "^6.5.0"
google-cloud-secret-manager = "^2.20.0"
google-generativeai = "^0.5.4"
gradio = "^4.32.1"
lingua-language-detector = "^2.0.2"
litellm = "^1.39.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
